[gd_scene load_steps=2 format=3 uid="uid://bym64clfq2d8g"]

[ext_resource type="Script" path="res://scripts/score.gd" id="1_6p3vg"]

[node name="Score" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_6p3vg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TotalProfit" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="TotalSharesBought" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="CrabTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
